<resources>
    <string name="app_name">roknEltayb</string>
    <string name="welcome_to">Welcome to Rokn El-Tayb retailing and delivering household and business disposables. We\'re excited to see you again!</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_verification_code">Enter Verification code</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don`t have an account?</string>
    <string name="email_address">Email Address<font color='#F81212'> *</font></string>
    <string name="username">Username<font color='#F81212'> *</font></string>
    <string name="confirm_password">Confirm password</string>
    <string name="choose">Choose\n</string>
    <string name="block">Block</string>
    <string name="street">Street</string>
    <string name="avenue">Avenue</string>
    <string name="building_number">Building Number</string>
    <string name="floor">Floor</string>
    <string name="apartment">Apartment</string>
    <string name="delivery_instruction">Delivery Instruction</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="please_enter_your_phone_number_to_receive_a_verification_code_to_reset_the_password">Please enter your phone number to receive a verification code to reset the password</string>
    <string name="send">Send</string>
    <string name="an_sms_with_a_4_digit_verification_code_has_just_been_sent_to">An SMS with a 4-digit verification code has just been sent to</string>
    <string name="did_you_get_a_code">Did you get a code?</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="new_password">New password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="please_enter_a_new_password_at_least_8_letters_numbers">Please enter a new password at least 8 letters / numbers</string>
    <string name="update_password">Update password</string>
    <string name="please_write_phone_number">please write phone number!</string>
    <string name="otp_code_must_be_more_than_4_digits">OTP code must be more than 4 digits</string>
    <string name="please_enter_otp_code">Please enter otp code</string>
    <string name="please_write_username">please write username</string>
    <string name="please_write_email_address">please write email address</string>
    <string name="invalid_email">Invalid email</string>
    <string name="confirm_password_does_not_match">Confirm password does not match</string>
    <string name="please_select_area">please select area</string>
    <string name="please_write_block">please write block</string>
    <string name="please_write_delivery_instruction">please write delivery Instruction</string>
    <string name="please_write_apartment">please write apartment</string>
    <string name="please_write_floor">please write floor</string>
    <string name="please_write_building_number">please write building Number</string>
    <string name="please_write_avenue">please write avenue</string>
    <string name="please_write_street">please write street</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="more">More</string>
    <string name="did_not_get_the_code">Didn\'t get the code? Resend in %d Seconds</string>
    <string name="password_is_empty">Password cannot be empty</string>
    <string name="phone_number_is_empty">Phone number cannot be empty</string>
    <string name="phone_number_should_be_11_char">Phone number should be 11 digit</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="password_must_contain_upper_case_letter">Password must contain at least 1 uppercase letter</string>
    <string name="password_must_contain_lower_case_letter">Password must contain at least 1 lower case letter</string>
    <string name="password_must_contain_special_char">Password must at least contain 1 special character</string>
    <string name="wrong_phone_or_password">Wrong phone or password</string>
    <string name="password_is_too_short">Password too short</string>
    <string name="confirm_password_is_less_than_8_letters">confirm password is less than 8 letters</string>
    <string name="password_is_less_than_8_letters">password is less than 8 letters</string>
    <string name="shop_by_categories">Shop by Categories</string>
    <string name="popular_produts">Popular Produts</string>
    <string name="daily_best_sells">Daily Best Sells</string>
    <string name="sort_by">Sort By</string>
    <string name="popularity">Popularity</string>
    <string name="price_high_to_low">Price: High to Low</string>
    <string name="price_low_to_high">Price: Low to High</string>
    <string name="new_arrivals">New</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="sort">Sort</string>
    <string name="product_details">Product Details</string>
    <string name="description">Description</string>
    <string name="product_ratings_amp_reviews"><![CDATA[Product Ratings & Reviews]]></string>
    <string name="my_orders">My Orders</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_profile">My Profile</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_language">Change language</string>
    <string name="logout">Logout</string>
    <string name="ar">Ar</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="add_comment">Add Comment</string>
    <string name="rate_the_product">Rate the product?</string>
    <string name="share_opinion">Share Opinion</string>
    <string name="write_rate">Write Rate…</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="continue_shoppting">Continue Shoppting</string>
    <string name="view_cart">View Cart</string>
    <string name="items_found">Items found</string>
    <string name="mobile_number">Mobile number<font color='#F81212'> *</font></string>
    <string name="address">Address<font color='#F81212'> *</font></string>
    <string name="address2">Address</string>
    <string name="delete_you_account">Delete you account</string>
    <string name="update">Update</string>
    <string name="name_address">Name address</string>
    <string name="add_address">Add Address</string>
    <string name="update_address">Update Address</string>
    <string name="see_all">See All</string>
    <string name="new_address">New Address</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="please_select_a_city">Please select a city</string>
    <string name="please_write_its_unique_tag">Please write its unique tag</string>
    <string name="do_you_wand_delete_this_address">Do you want delete this address?</string>
    <string name="do_you_want_delete_your_account">Do you want delete your account?</string>
    <string name="do_you_want_to_log_out_of_the_account">Do you want to log out of the account?</string>
    <string name="token_expite">The session has ended</string>
    <string name="you_should_login">You must login</string>
    <string name="contact_from">Contact From</string>
    <string name="name_contact">Name<font color='#F81212'> *</font></string>
    <string name="enter_you_name">Enter you name</string>
    <string name="phone">Phone<font color='#F81212'> *</font></string>
    <string name="subject">Subject<font color='#F81212'> *</font></string>
    <string name="message">Message<font color='#F81212'> *</font></string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_message_here">Enter your message here.......</string>
    <string name="enter_subject_of_message">Enter Subject of message</string>
    <string name="fill_all_fildes">Fill all fields</string>
    <string name="you_have_successfully_logged_out">You have successfully logged out</string>
    <string name="please_enter_the_current_password_and_the_new_password_at_least_8letters_number">Please enter the current password and the new password at least 8letters / number</string>
    <string name="current_password">Current Password</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="cancel">Cancel</string>
    <string name="w_pass_check">Password Is Empty</string>
    <string name="w_pass_empty_cofrim">Confirm password Is Empty</string>
    <string name="w_confirm_pass_check">Confirm password does not match</string>
    <string name="label_enter_user_length">Enter a 14-digit phone number</string>
    <string name="label_enter_password_length">Please enter the password more than 8 digits / letters</string>
    <string name="label_enter_ver_new_password_length">Please enter the verify new password more than 8 digits / letters</string>
    <string name="Confirm_password_does_not_match">Confirm password does not match</string>
    <string name="enter_discount_code">Enter Discount Code</string>
    <string name="apply">Apply</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="cart_total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="count">Count</string>
    <string name="items">" Items"</string>
    <string name="free">Free</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="select_your_location">Select your location</string>
    <string name="select_your_delivery_time">Select your delivery time</string>
    <string name="select_your_delivery_date">Select your delivery date</string>
    <string name="on">On</string>
    <string name="payment">Payment</string>
    <string name="track_you_order">Track you order</string>
    <string name="payment_method">Payment Method</string>
    <string name="pay_by_cash">Pay By Cash</string>
    <string name="payment_details">Payment Details</string>
    <string name="delivery">Delivery</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="order_id">Order ID</string>
    <string name="place_on">"Place on "</string>
    <string name="qty">"QTY"</string>
    <string name="your_order_has_been_delivery_successfully">your order has been delivery successfully!</string>
    <string name="pending_confirmation">Pending</string>
    <string name="waiting_to_be_shipped">Waiting To Be Shipped</string>
    <string name="on_way">On Way</string>
    <string name="delivered">Delivered</string>
    <string name="see_status_history">See Status history</string>
    <string name="order_id2">"Order ID: "</string>
    <string name="order_status">Order status</string>
    <string name="please_select_address">Please select address</string>
    <string name="please_select_delivery_time">Please select delivery time</string>
    <string name="how_can_help_you_n_let_us_know_how_we_can_help_you">How can help you \n Let us know how we can help you</string>
    <string name="send_a_message">Send A Message</string>
</resources>