<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_sort_black"
                android:backgroundTint="@color/black"
                android:textSize="@dimen/_15sdp"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="#ECEBEB"/>

            <RadioButton
                android:id="@+id/higtRadioButton"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:text="@string/price_high_to_low"/>

            <RadioButton
                android:id="@+id/lowRadioButton"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:text="@string/price_low_to_high"/>

            <RadioButton
                android:id="@+id/newRadioButton"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:text="@string/new_arrivals"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
