<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.more.contactus.ContactUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/custom_bg_search"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/how_can_help_you_n_let_us_know_how_we_can_help_you"
            android:textAlignment="center"
            android:textColor="@color/green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10ssp"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone" />

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_15sdp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10ssp"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mail_contact" />

            <TextView
                android:id="@+id/mailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAlignment="viewStart"
                android:layout_marginStart="@dimen/_15sdp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_address" />

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_15sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/contact_from"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:background="@drawable/custom_bg_button_contact"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/name_contact"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:textAlignment="viewStart"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@null"
                android:hint="@string/enter_you_name"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:background="@drawable/custom_bg_button_contact"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/phone"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:inputType="phone"
                android:textAlignment="viewStart"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@null"
                android:hint="@string/enter_your_phone_number"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:background="@drawable/custom_bg_button_contact"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/email_address"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/emailAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textAlignment="viewStart"
                android:background="@null"
                android:hint="@string/enter_your_email_address"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:background="@drawable/custom_bg_button_contact"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/subject"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/subjectEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textAlignment="viewStart"
                android:background="@null"
                android:hint="@string/enter_subject_of_message"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:background="@drawable/custom_bg_button_contact"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/message"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@null"
                android:hint="@string/enter_your_message_here"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <Button
            android:id="@+id/sendMessageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40ssp"
            android:layout_marginEnd="@dimen/_40ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/custom_bg_button"
            android:text="@string/send_a_message"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_gravity="bottom"
            android:textStyle="normal" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>