<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_wand_delete_this_address"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:textSize="@dimen/_15sdp"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="#ECEBEB"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:weightSum="2">

                <Button
                    android:id="@+id/yesButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_bg_button" />

                <Button
                    android:id="@+id/noButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:background="@drawable/custom_bg_edittext" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
