<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:padding="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/closs_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:layout_margin="@dimen/_5sdp"
            android:layout_gravity="end"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_the_product"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_opinion"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_10sdp"
            android:textAlignment="center"/>


        <RatingBar
            android:id="@+id/rateBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="5"
            android:stepSize="1"
            android:progressTint="#FFB400"
            android:numStars="5"
            android:layoutDirection="rtl"
            android:layout_marginTop="@dimen/_15sdp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_bg_edittext"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="none"
            app:boxStrokeColor="@color/white"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_rate"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:layoutDirection="rtl"
                android:background="@null"
                android:lines="6"
                android:padding="12dp"
                android:textColor="@color/black"
                app:hintEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sendComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            app:backgroundTint="@null"
            android:textAllCaps="false"
            android:text="@string/send"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/custom_bg_button"/>


    </LinearLayout>
</androidx.cardview.widget.CardView>